@@ -46,15 +46,13 @@ diskfs_S_io_revoke (struct protid *cred)
   mutex_lock (&np->lock);
 
   err = fshelp_isowner (&np->dn_stat, cred->user);
-  if (err)
-    {
-      mutex_unlock (&np->lock);
-      return err;
-    }
-
-  ports_bucket_iterate (diskfs_port_bucket, iterator_function);
 
   mutex_unlock (&np->lock);
+
+  if (err)
+    return err;
+
+  ports_bucket_iterate (diskfs_port_bucket, iterator_function);
 
   return 0;
 }
