@@ -1,3 +1,8 @@
+Sat Feb 20 20:46:21 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-revoke.c (diskfs_S_io_revoke): Release NP->lock before
+	beginning iteration.
+	
 1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* io-revoke.c (diskfs_S_io_revoke): Fix typo in 1999-02-16 change.
